# generos

./: README.md  generos.bash  install.bash  load_model.py  metamodel.ecore  metamodelGenerator.py  model.py  modelj.json  packageGenerator.py  test.xmi  transformation.py
bp/: documentation.html
bp/css/: main.css
dsl/: generos.tx  model.grs  model1.grs  model2.grs  model3.grs  run_generos_model.py
examples/: obstacle_avoidance.grs
examples/PubSub/: pubsub.grs
examples/ServerClient/: serverclient.grs
examples/nested_imports_and_launch/: model1.grs
examples/obstacle_avoidance/: obstacle_avoidance.grs
examples/simple_obstacle_avoidance/: obstacle_avoidance.grs
metamodelLib/: metageneros.ecore  metamodel.ecore  metamodelGenerator.py
metamodelLib/metageneros/: __init__.py  metageneros.py
metamodelLib/metamodel/: __init__.py  metamodel.py
metamodelLib/partial metamodels/: metageneros.aird  metageneros.ecore  metageneros.genmodel  metagraph.ecore  metaobject.ecore  (+4 more)
models/: generos.xmi  model.py  model2.py  test.xmi  test2.xmi
pack1/: Node_2.py  Node_3.py  Node_3_node.py  Nodes_name.py  package.xml  setup.cfg  setup.py
templates/: packageTemplate.py  temp_CMakeLists.txt  temp_action.action  temp_cpppackage.xml  temp_documentation.html  temp_host_documentation.html  temp_interfaces_documentation.html  temp_launch.py  temp_launchsetup.py  temp_main.css  temp_msg.msg  temp_node.py  temp_package.xml  temp_pdf.css  temp_setup.cfg  temp_setup.py  temp_srv.srv
workspace/install/pack2/share/pack2/: package.ps1  package.sh  package.xml  package.zsh
(+304 files in other folders)
